Revision history for {{$dist->name}}

{{$NEXT}}

2.000     2020-06-09 00:37:33+08:00 Asia/Kuala_Lumpur
    New features:

    - Ryu::Buffer was previously an empty class, should now be doing something useful
    - ->as_queue to get a Future::Queue instance from a Ryu::Source
    - ->as_buffer to get a Ryu::Buffer instance from a Ryu::Source

    Deprecations:

    - Ryu::Exception ->future is no longer supported, should be ->as_future instead

    Since there's a deprecated feature, this is a major version release.

1.012     2020-03-22 13:35:42+08:00 Asia/Kuala_Lumpur
    New features:

    - ->unblocked returns a Future which can be used to await a paused source/sink.

1.011     2020-01-07 11:24:46+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - ->ordered_futures now cancels any pending Futures when the source fails.

1.010     2019-12-25 20:55:38+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - ->take_until and ->skip_until may complete before the condition, handle that correctly
    - fully-qualify calls to Scalar::Util::refaddr to avoid runtime errors

1.009     2019-11-17 23:53:21+08:00 Asia/Kuala_Lumpur
    No new features.

    Dependencies:

    - minimum Future.pm version is now 0.42, due to a memory leak relating
    to cancellation in previous versions:
    https://rt.cpan.org/Ticket/Display.html?id=130957

1.008     2019-11-06 00:05:39+08:00 Asia/Kuala_Lumpur
    New features:

    - support ->on_failed on Ryu::Source

    Bugs fixed:

    - a Ryu::Sink could be completed before the Ryu::Source, avoid
    exceptions when the Ryu::Source subsequently completes and tries
    to mark the Future as done

1.007     2019-10-03 00:25:56+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - ->ordered_futures was terminating too early due to previous changes, now
    only finishes after all items are complete.

1.006     2019-10-01 12:48:37+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:
